kubernetes-3/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /(.*) 
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port: 
              number: 9000
